# hands-on-ml-sklearn-pytorch-1e

./: .gitignore  README.md  pyproject.toml
chapter_02/: chapter_02.ipynb  chapter_02_exercises.ipynb
chapter_03/: chapter_03.ipynb
